# omni

./: .gitignore  Cargo.toml  DEV.md  README.md  mprocs.yaml  package.json
.beads/: config.yaml  metadata.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: product-design-plan.md  raycast-extension-research.md  ui-ipc.md
extensions/raycast/omni/: .eslintrc.cjs  CHANGELOG.md
extensions/raycast/omni-transcribe/: README.md  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
lib/: platform.js  run.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: dev-start.sh  mprocs-start-transcribe.sh  mprocs-start.sh  mprocs-stop-all.sh  skhd-start.sh  skhd-stop-insert.sh  sync-npm-version.cjs
src/: backend.rs  cli.rs  clipboard.rs  config.rs  daemon.rs  doctor.rs  hooks.rs  input.rs  main.rs  recording.rs  ui_ipc.rs
src/ui_client/: anim.rs  aurora.rs  config.rs  ipc.rs  lock.rs  mod.rs  model.rs  position.rs  reducer.rs  view.rs
src/ui_client/platform/: macos.rs
src/ui_client/shaders/: aurora.wgsl
tests/: daemon_smoke.rs  input_reload_smoke.rs  show_ui_autospawn_smoke.rs  start_transcribe_visibility_smoke.rs  stop_kills_ui_smoke.rs  ui_socket_smoke.rs  ui_tail_binary_smoke.rs
tests/fixtures/: realtime-delta-then-snapshot.jsonl  realtime-empty-delta-stream.jsonl  realtime-empty-delta-with-top-level-error.jsonl  realtime-sparse-final-response.jsonl
(+7 files in other folders)
