[package]
name = "omni-transcribe"
version = "0.1.6"
edition = "2024"
default-run = "omni"

[[bin]]
name = "omni"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.16"
dirs = "6"
gpui = { git = "https://github.com/ahkohd/ggpui.git", package = "gpui", rev = "bf1f67637c6ece930a96c126ed1eb0c38b6376b3", default-features = false, features = ["font-kit"] }
gpui_platform = { git = "https://github.com/ahkohd/ggpui.git", package = "gpui_platform", rev = "bf1f67637c6ece930a96c126ed1eb0c38b6376b3", default-features = false, features = ["font-kit"] }
hound = "3"
raw-window-handle = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
toml = "0.9"
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSColor",
  "NSGlassEffectView",
  "NSGraphics",
  "NSRunningApplication",
  "NSView",
  "NSVisualEffectView",
  "NSWindow",
] }
